--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
