--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
