--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
